# CMSC254-ML

./: main.py  project1_regression_modelsel.ipynb  pyproject.toml
A1/: project1_regression_modelsel.ipynb
A2/: project_2_classification.ipynb
A2/.ipynb_checkpoints/: project_2_classification-checkpoint.ipynb
A2/data/: SeoulBikeData.csv
project2/: project_2_classification.ipynb
